--- a/hugo.toml
+++ b/hugo.toml
@@ -1,16 +1,52 @@
-baseURL = 'https://example.org/'
+baseURL = 'http://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'Paperesque'
+title = "Alt+Esque"
+theme = "shibui"
+enableGitInfo = true
 
-[[params.topmenu]]
-  name = "about"
-  url = "about/"
+[params.author]
+name = "S. E."
+email = "to be provided"
 
-[[params.topmenu]]
-  name = "contact"
-  url = "contact/"
+[markup]
+  defaultMarkdownHandler = "goldmark"
+  # By default, Goldmark trims unsafe outputs which might prevent some shortcodes from rendering.
+  # It is recommended to set markup.goldmark.renderer.unsafe=true if you encounter problems.
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true  # Enable user to embed HTML snippets in Markdown content.
+  [markup.highlight]
+    codeFences = true
+    guessSyntax = true
+    lineNos = false
+    noClasses = true
+    tabWidth = 4
+    style = "algol_nu"
+  [markup.tableOfContents]
+    startLevel = 2
+    endLevel = 4
+    ordered = true
 
-[[params.topmenu]]
-  name = "rss"
-  url = "posts/index.xml"
+[menu]
+  [[menu.main]]
+    name = "Posts"
+    url = "/posts/"
+    weight = 1
+  [[menu.main]]
+    name = "Resources"
+    url = "/resources/"
+    weight = 2
+
+
+[build]
+  writeStats = true
+
+[frontmatter]
+  date = ['date', 'publishDate', 'lastmod']
+  expiryDate = ['expiryDate']
+  lastmod = [':git', 'lastmod', 'date', 'publishDate']
+  publishDate = ['publishDate', 'date']
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
