--- a/hugo.toml
+++ b/hugo.toml
@@ -19,9 +19,8 @@ email = "to be provided"
     codeFences = true
     guessSyntax = true
     lineNos = false
-    noClasses = true
     tabWidth = 4
-    style = "algol_nu"
+    style = "rose-pine-moon"
   [markup.tableOfContents]
     startLevel = 2
     endLevel = 4
